# site-ecommerce

./: .env.production.example  .gitignore  CLAUDE.md  Dockerfile.allinone  PLAN.md  README.md  deploy.sh  docker-compose.yml  docker-entrypoint.sh  requirements.md  supervisord.conf  test-deploy.sh
backend/: .env.dev  Dockerfile  Dockerfile.prod  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0e063271d766_initial_migration.py  18dad5557ec7_add_translation_fields_to_products_and_.py  4a_add_wishlist.py  5a_add_tracking.py  5b1a32355fc8_add_product_enhancements_and_reviews.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: addresses.py  admin.py  auth.py  cart.py  categories.py  coupons.py  (+6 more)
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  address.py  cart.py  category.py  coupon.py  order.py  product.py  review.py  user.py  wishlist.py
backend/app/schemas/: address.py  auth.py  cart.py  category.py  coupon.py  order.py  product.py  user.py
backend/app/services/: email.py
backend/app/utils/: translations.py
backend/scripts/: add_electronics_products.py  add_more_categories.py  add_more_products.py  add_real_images.py  expand_seed_data.py  fix_better_images.py  fix_simple_images.py  fix_specification_keys.py  fix_working_images.py  migrate_translations.py  remove_non_electronics_categories.py  seed_data.py  seed_reviews.py  seed_verkkokauppa_data.py  translate_categories.py
(+75 files in other folders)
